@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.16-4
-Date: 2007/08/31
+Version: 0.16-5
+Date: 2007/09/07
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
